minor fix for wrapping inside <pre>

--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -187,4 +187,6 @@
   padding-left: 2rem;
 
   font-size: .9rem;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
